# libtunosocks

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
lib/: libtun2socks.cpp  libtun2socks.h  tunosocks.cpp  tunosocks.h
lwip/core/: tcp_in.c
lwip/core/ipv4/: ip4.c
lwip/include/: lwipopts.h
lwip/include/arch/: cc.h
lwip/platform/: sys_arch.c
net/: bufferdef.h  lwip_callback.h  lwip_icmp_callback.h  lwip_tcp_callback.cpp  lwip_tcp_callback.h  lwiphelper.cpp  lwiphelper.h  packethandler.cpp  packethandler.h  socks5server_def.h  socks5server_info.h  socksifier.cpp  socksifier.h
net/filter/: udp_filter.h
net/protocol/: socks5_protocol.h  socks5_protocol_helper.cpp  socks5_protocol_helper.h
net/tcp/: tcp_session.h  tcp_session_map_def.h  tcphandler.cpp  tcphandler.h
net/udp/: udp_session.h  udp_session_map_def.h  udphandler.cpp  udphandler.h  udptimer_def.h
tuntap/: ituntap.h  tap-windows.h  tuntap_linux.cpp  tuntap_linux.h  tuntap_macos.cpp  tuntap_macos.h  tuntap_windows.cpp  tuntap_windows.h  tuntaphelper.cpp  tuntaphelper.h  tuntapinstaller.cpp  tuntapinstaller.h
utils/: filehelper.h  logger.cpp  logger.h  singleton.h  system_exec.cpp  system_exec.h
utils/app/: app.h  port_def.h  readystate_checker.h  route_guard.h  singleinstanceapp.h
